--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
           action: rebuild
         - path: ./package-lock.json
           action: rebuild
-        - path: ./next.config.js
+        - path: ./next.config.ts
           action: rebuild
         - path: .
           target: /app
