api started - blog pages/frontend finished

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:3000
+    depends_on: 
+      - db
 
     develop:
       watch:
@@ -17,3 +19,26 @@ services:
         - path: .
           target: /app
           action: sync
+    restart: unless-stopped
+    environment:
+        MONGODB_ADMINUSERNAME: ${MONGODB_ADMINUSERNAME}
+        MONGODB_ADMINPASSWORD: ${MONGODB_ADMINPASSWORD}
+        MONGODB_URI: ${MONGODB_URI}
+
+  db:
+    image: mongo:8.0.10-noble
+    ports:
+      - 27017:27017
+    container_name: db1
+    restart: unless-stopped
+    env_file: 
+      - .env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    volumes:
+      - blogs:/data/db
+      
+volumes:
+  blogs:
+
