--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--max_old_space_size=300' next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
